updated nav styles and footer logo

--- a/assets/sass/components/_navigation.scss
+++ b/assets/sass/components/_navigation.scss
@@ -65,6 +65,7 @@
         height: 36px;
         padding: 10px 0;
 		transition: color 0ms ease-out;
+        font-weight: 500;
 
         &:after {
             content: "";
