--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,13 @@
 <footer class="footer">
-	<svg class="hbc-stripes-logo" xmlns="http://www.w3.org/2000/svg">
+<!-- 	<svg class="hbc-stripes-logo" xmlns="http://www.w3.org/2000/svg">
 		<use class="hbc-stripe hbc-stripe--green" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#hbc-green" ></use>
 		<use class="hbc-stripe hbc-stripe--red" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#hbc-red" ></use>
 		<use class="hbc-stripe hbc-stripe--yellow" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#hbc-yellow" ></use>
 		<use class="hbc-stripe hbc-stripe--blue" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#hbc-blue" ></use>
-	</svg>
-<!-- 	<svg class="arrow-box" xmlns="http://www.w3.org/2000/svg">
-        <use class="arrow" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#arrow-box"></use>
-    </svg> -->
+	</svg> -->
+	<svg class="hbc-tech-logo" xmlns="http://www.w3.org/2000/svg">
+	        <use class="hbc-tech-logo__use" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#hbc-tech-logo" ></use>
+    </svg>
 	<section class="footer__links">
 		{% include social-links.html %}
 		<ul class="navigation navigation--footer">
