--- a/assets/sass/components/_footer.scss
+++ b/assets/sass/components/_footer.scss
@@ -40,6 +40,12 @@
 		}
 	}
 
+	.hbc-tech-logo {
+	    width: 80px;
+	    height: 80px;
+
+	}
+
 	@media screen and (max-width: $breakpoint-small) {
 		padding: 40px 0px 80px 0px;
 
