--- a/assets/sass/pages/_article-page.scss
+++ b/assets/sass/pages/_article-page.scss
@@ -17,7 +17,7 @@
         box-shadow: inset 0px -540px 20000px 40px white;
 	    transform: scaleX(1.2);
         animation-name: reveal-feature-image, color-animation;
-        animation-duration: 0.15s, 20s;
+        animation-duration: 0.15s, 30s;
         animation-delay: 0.4s, 0s;
         animation-timing-function: linear, linear;
         animation-direction: normal, normal;
@@ -213,8 +213,10 @@
 
 		&__no-feature-image {
 	        animation-name: reveal-feature-image--mobile, color-animation;
-            animation-duration: 0.5s, 20s;
+            animation-duration: 0.5s, 30s;
 	        animation-delay: 0s, 0.5s;
+            transform: scaleX(1.8);
+			height: 100vh;
 	    }
 
     	&__feature-image {
