--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,10 +6,13 @@
 		<use class="hbc-stripe hbc-stripe--blue" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-tech-logo-primary.svg#hbc-blue" ></use>
         <use class="hbc-tech-logo__use" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-tech-logo-primary.svg#text" ></use>
     </svg> -->
-    <svg class="est1670" xmlns="http://www.w3.org/2000/svg">
-        <use class="hbc-tech-logo__use" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#est1670" ></use>
-    </svg>
-	<section class="footer__links">
+<!--     <svg class="hbc-tech-logo" xmlns="http://www.w3.org/2000/svg">
+        <use class="hbc-tech-logo__use" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-tech-logo.svg#hbc-tech-logo" ></use>
+    </svg> -->
+	<svg class="est1670" xmlns="http://www.w3.org/2000/svg">
+		<use class="hbc-tech-logo__use" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#est1670" ></use>
+	</svg>
+    <section class="footer__links">
 		{% include social-links.html %}
 		<ul class="navigation navigation--footer">
 			{% for link in site.data.navigation.footer-links %}
