--- a/assets/sass/base/_animations.scss
+++ b/assets/sass/base/_animations.scss
@@ -30,6 +30,12 @@
     }
 }
 
+@keyframes fade-in {
+    to { 
+        opacity: 1;
+    }
+}
+
 @keyframes animate-stroke {
     from {
         stroke-dasharray: 116px;
