--- a/assets/sass/pages/_article-page.scss
+++ b/assets/sass/pages/_article-page.scss
@@ -213,7 +213,7 @@
 
 		&__no-feature-image {
 	        animation-name: reveal-feature-image--mobile, color-animation;
-            animation-duration: 0.5s, 30s;
+            animation-duration: 0s, 30s;
 	        animation-delay: 0s, 0.5s;
             transform: scaleX(1.8);
 			height: 100vh;
@@ -226,6 +226,7 @@
 		.article__content {
 			padding-top: 30px;
 			margin-top: 50px;
+	        top: 0;
 			grid-template-columns: 10px 20px 1fr 10px;
 		    grid-template-areas:
 			    ". meta meta ."
