removed feature image on mobile article

--- a/assets/sass/pages/_article-page.scss
+++ b/assets/sass/pages/_article-page.scss
@@ -223,9 +223,15 @@
 	        animation-name: reveal-feature-image--mobile;
 		}
 
+		&__feature-image,
+		&__no-feature-image {
+			display: none;
+			visibility: invisible;
+		}
+
 		.article__content {
-			padding-top: 30px;
-			margin-top: 50px;
+		    padding-top: 10px;
+		    margin-top: 0;
 	        top: 0;
 			grid-template-columns: 10px 20px 1fr 10px;
 		    grid-template-areas:
