--- a/assets/sass/components/_article-listing.scss
+++ b/assets/sass/components/_article-listing.scss
@@ -61,25 +61,30 @@
 	&__remaining  {
 		display: grid;
 		grid-template-columns: 30% 70%;
-		grid-auto-rows: minmax(100px, auto);
+		grid-auto-rows: repeat(11, minmax(100px, auto));
 	    grid-template-areas:
 	    "ft art"
 	    "ft art"
 	    "ft art"
-	    ;
+	    "ft art"
+	    "ft art"
+	    "ft art"
+	    "ft art"
+	    "ft art"
+	    "ft art"
+	    "ft art"
+	    ". pg";
+
 		align-items: start;
 		padding: 40px 0 40px 0;
 
 		.featured-topics {
 			grid-area: ft;
-			border-right: solid 1px $hbc-border;
-			margin-right: 40px;
 			margin-left: 40px;
 			position: sticky;
 			top: 100px;
 			display: flex;
 		    flex-direction: column;
-		    height: 100%;
 
 			&__title {
 				padding-right: 20px;
@@ -107,24 +112,49 @@
 			}
 		}
 
-		.snippet {
-			grid-area: art;
-			padding: 10px 0 40px 0px;
-			grid-row: auto;
-			border-bottom: solid 1px $hbc-border;
-			margin-bottom: 40px;	
+		@media screen and (min-width: $breakpoint-medium) {
 
-			&:first-of-type {	
-				padding-top: 0;
-				margin-top: -5px;
+			.snippet {
+				grid-area: art;
+				padding-left: 60px;
+				grid-row: auto;
+				border-left: solid 1px $hbc-border;
+				margin-bottom: 0px;
+				
+				&__title {
+					border-top: solid 1px $hbc-border;
+					margin-top: 40px;
+					padding-top: 40px;
+					width: 100%;
+				}
+
+				&:first-of-type {
+					padding-top: 0;
+					margin-top: -5px;
+
+					.snippet__title {
+						padding-top: 0;
+						margin-top: 0;
+						border: 0;
+					}
+				}
+
+				&:last-child {
+					border-bottom: solid 0px $hbc-border;
+				}
 			}
 
-			&:last-child {
-				border-bottom: solid 0px $hbc-border;
+			.pagination {
+				grid-area: pg;
+				margin: 60px;
+				// display: flex;
+				align-self: flex-end;
+				margin: 60px;
 			}
 		}
-
 	}
+
+	
 
 	@media screen and (max-width: $breakpoint-medium) {
 		max-width: 100vw;
@@ -198,9 +228,11 @@
 			    &:first-of-type {
 					padding-top: 20px;
 			    }
-				
-				&:last-child {
-					padding-bottom: 0;
+
+				.snippet__excerpt {
+					border-bottom: solid 1px $hbc-border;
+					width: 100%;
+					padding-bottom: 40px;
 				}
 			}
 
