--- a/assets/sass/components/_pagination.scss
+++ b/assets/sass/components/_pagination.scss
@@ -1,12 +1,13 @@
 .pagination {
+	width: 100%;
     padding: 20px 0;
-    text-align: right;
-    margin-bottom: 40px;
+    text-align: left;
     font-weight: 500;
     min-height: 100px;
 
     @media screen and (max-width: $breakpoint-medium) {
     	text-align: center;
+    	margin: auto;
     }
 
 	&__label {
@@ -24,6 +25,10 @@
 
 	    &:last-child {
 	    	padding-right: 0;
+	    }
+
+	    &:first-child {
+	    	padding-left: 0;
 	    }
 
 	    &:visited,
