--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -45,27 +45,7 @@ layout: default
         </footer>
     </section>
 </article>
-<aside class="recirc">
-    <h2 class="header__title">More Insights</h2>
-    <a class="header__view-all-link" href="{{ site.url }}{{ site.baseurl }}/categories/index.html">Explore Categories</a>
-    <div class="recirc__articles">
-    {% assign counter = 0 %}
-    {% assign maxPosts = 4 %}
-    {% assign authorPosts = site.posts | where: "author", page.author %}
-    {% assign relatedPosts = site.posts | where: "categories", page.categories.first %}
-    {% assign recentPosts = site.posts %}
-    {% assign recirc = authorPosts | concat: relatedPosts | concat: recentPosts %}
-
-    {% for post in recirc %}
-        {% if counter < maxPosts and post.title != page.title %}
-            {% assign counter=counter | plus:1 %}
-        <article class="recirc__articles__item">
-            {% include article-snippet.html excerpt=true %}
-        </article>
-        {% endif %}
-    {% endfor %}
-    </div>
-</aside>
+{% include recirc.html %}
 
 
 <!-- {% if site.owner.disqus-shortname and page.comments == true %}
