--- a/assets/sass/components/_featured-topics.scss
+++ b/assets/sass/components/_featured-topics.scss
@@ -34,7 +34,8 @@
 	@media screen and (min-width: $breakpoint-medium) {
 
 		&__list {
-			padding-bottom: 40px;
+			padding-bottom: 10px;
+			margin-bottom: 20px;
 			margin-right: 40px;
 		}
 	}
