--- a/assets/sass/pages/_insights-page.scss
+++ b/assets/sass/pages/_insights-page.scss
@@ -76,40 +76,12 @@
 	    ". pg";
 
 		align-items: start;
-		padding: 40px 0 40px 0;
+		padding: 40px 0 40px 40px;
 
 		.featured-topics {
 			grid-area: ft;
-			margin-left: 40px;
 			position: sticky;
 			top: 100px;
-			display: flex;
-		    flex-direction: column;
-
-			&__title {
-				padding-right: 20px;
-				margin: 0 0 15px 0;
-			    font-weight: 500;
-			}
-
-			&__list {
-				list-style: none;
-			    padding: 0 20px 0 0;
-			    margin: 0;
-			}
-
-			&__list-item {
-			    margin: 10px 0 20px 0;
-			}
-
-			&__list-item__link {
-				text-decoration: none;
-				text-transform: uppercase;
-				color: $hbc-gray-2;
-
-				@include special-text-link();
-
-			}
 		}
 
 		@media screen and (min-width: $breakpoint-medium) {
@@ -140,14 +112,13 @@
 				}
 
 				&:last-child {
-					border-bottom: solid 0px $hbc-border;
+					border-bottom: solid 1px $hbc-border;
+					width: 100%;
 				}
 			}
 
 			.pagination {
 				grid-area: pg;
-				margin: 60px;
-				// display: flex;
 				align-self: flex-end;
 				margin: 60px;
 			}
@@ -222,7 +193,6 @@
 		    padding: 0 20px;
 
 			.snippet {
-				padding: 20px 0;
 			    margin-bottom: 20px;
 
 			    &:first-of-type {
@@ -234,16 +204,13 @@
 					width: 100%;
 					padding-bottom: 40px;
 				}
-			}
 
-		    .featured-topics {
-				order: 2;
-				width: 100%;
-				padding: 0 0 20px 0;
-				border-right: solid 0 $hbc-border;
-				border-top: solid 1px $hbc-border;
-				margin: 0;
-		    }
+				.snippet__excerpt {
+					border-bottom: solid 1px $hbc-border;
+					width: 100%;
+					padding-bottom: 40px;
+				}
+			}
 		}	
 	}
 }
