--- a/assets/sass/base/_layout.scss
+++ b/assets/sass/base/_layout.scss
@@ -75,3 +75,16 @@ $breakpoint-large: 1024px;
 		display: block;
 	}
 }
+
+// prevent anchor liks from being hidden behind sticky nav ;)
+@media screen and (min-width: $breakpoint-medium) {
+
+	:target:before {
+		content: "";
+		display: block;
+		height: 90px; /* fixed header height*/
+		margin: -90px 0 0; /* negative fixed header height */
+	}
+
+}
+
