updates to global styles

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -23,11 +23,13 @@
 @import '../sass/components/pagination';
 @import '../sass/components/social-links';
 @import '../sass/components/featured-topics';
+@import '../sass/components/featured-authors';
 
 // pages
 @import '../sass/pages/homepage';
 @import '../sass/pages/insights-page';
 @import '../sass/pages/article-page';
+@import '../sass/pages/category-page';
 @import '../sass/pages/categories-page';
 @import '../sass/pages/author-page';
 @import '../sass/pages/authors-page';
