updated featured-topics to be more flexible and standalone

--- a/assets/sass/pages/_insights-page.scss
+++ b/assets/sass/pages/_insights-page.scss
@@ -82,6 +82,7 @@
 			grid-area: ft;
 			position: sticky;
 			top: 100px;
+			margin-right: 40px;
 		}
 
 		@media screen and (min-width: $breakpoint-medium) {
@@ -182,10 +183,6 @@
 				    margin-top: 0px;
 				    padding-left: 0px;
 				}
-			}
-
-			&__excerpt {
-				display: none;
 			}
 		}
 
