--- a/_includes/featured-topics.html
+++ b/_includes/featured-topics.html
@@ -1,9 +1,12 @@
 <!-- featured topics -->
-<aside class="featured-topics"><h3 class="featured-topics__title">Featured Topics</h3>
+<aside class="featured-topics">
+	<h3 class="featured-topics__title">Featured Topics</h3>
     <ul class="featured-topics__list">
         {% for cat in site.category %}
         	<li class="featured-topics__list-item"><a class="featured-topics__list-item__link" href="{{ site.url }}{{ site.baseurl }}/category/{{ cat.name  | slugify }}">{{ cat.name | capitalize}}</a></li>
         {% endfor %}
     </ul>
+    {% if include.showMoreLink %}
     <a class="featured-topics__view-all-link" href="{{ site.url }}{{ site.baseurl }}/categories/index.html">Explore All Topics</a>
+    {% endif %}
 </aside>
