--- a/_layouts/article_listing.html
+++ b/_layouts/article_listing.html
@@ -7,7 +7,7 @@ layout: default
 <!-- this is the rest of the posts listed with no feature images-->
 <section class="article-listing">
     <div class="article-listing__remaining">
-    {% include featured-topics.html %}
+    {% include featured-topics.html showMoreLink=true %}
     {% for post in paginator.posts %}
           {% include article-snippet.html excerpt=true featureImage=false %}
     {% endfor %}
@@ -84,7 +84,7 @@ layout: default
     </div>
     <!-- this is the rest of the posts listed with no feature images-->
     <div class="article-listing__remaining">
-    {% include featured-topics.html %}
+    {% include featured-topics.html showMoreLink=true %}
     {% for post in paginator.posts offset:3 limit:8 %}
           {% include article-snippet.html excerpt=true featureImage=false %}
     {% endfor %}
