--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -1,16 +1,19 @@
 ---
 layout: default
 ---
-<section class="author-page">
-	<a href="{{ site.url }}{{ site.baseurl }}/authors/">< All Authors</a>
-	<h1 class="author-page__title">{{page.name}}</h1>
-	<p>{{page.mini-bio}}</p>
-</section>
 {% assign currAuthor = page.name %}
 {% assign authorPosts = site.posts | where: "author", currAuthor %}
 
-{% for post in authorPosts %}
-    <article class="author-article-listing">
-    {% include article-snippet.html excerpt=true %}
-    </article>
-{% endfor %}
+<section class="page authors-page">
+	<header class="page__header">
+		<h1 class="author-page__title">{{page.name}}</h1>
+		<p>{{page.mini-bio}}</p>
+	</header>
+	<section>
+		{% for post in authorPosts %}
+		    <article class="author-article-listing">
+		    {% include article-snippet.html excerpt=true %}
+		    </article>
+		{% endfor %}
+	</section>
+</section>
