--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header id="site-header" class="site-header {%if page.layout != "homepage" %} 
-{% if page.layout == "article" or "article_listing" or "homepage" %} site-header--scaled{% endif %}{% endif %}">
+{% if page.layout == "article" or "article_listing" %} site-header--scaled{% endif %}{% endif %}">
 	<a class="site-header__logo" href="{{ site.url }}{{ site.baseurl }}/">
 <!-- 	    <svg class="hbc-tech-logo" xmlns="http://www.w3.org/2000/svg">
 	        <use class="hbc-tech-logo__use" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#hbc-tech-logo" ></use>
@@ -36,7 +36,11 @@
 	        <span class="meta__title">All Posts By Category</span>
         {% elsif page.url contains '/authors/' %}
         	<a href="{{ site.url }}{{ site.baseurl }}/authors/" class="meta__category">Authors</a>
-        	<span class="meta__title">{{page.name}}</span>
+        	{% if page.title != nil %}
+        	<span class="meta__title">{{page.title}}</span>
+        	{% else %}
+        	<span class="meta__title">Featured Authors</span>
+	        {% endif %}
         {% endif %}
     </p>
 	<ul class="navigation">
