--- a/_includes/article-snippet.html
+++ b/_includes/article-snippet.html
@@ -2,25 +2,26 @@
 {% assign showFeatureImage = include.featureImage %}
 
 <section class="snippet">
-    <a href="{{ site.url }}{{ site.baseurl }}{{ post.url }}">
+    
     {% if showFeatureImage == true  %}
         {% if post.image.feature %}
-            <img class="snippet__feature-image" src=
+            <a href="{{ site.url }}{{ site.baseurl }}{{ post.url }}"><img class="snippet__feature-image" src=
             {% if post.image.feature contains 'http' %}
             "{{ post.image.feature }}"
             {% else %}
             "{{ site.url }}{{ site.baseurl }}/assets/images/{{ post.image.feature }}"
             {% endif %}
-            alt="{{ post.title }}">
+            alt="{{ post.title }}"></a>
         {% else %}
-            <img class="snippet__feature-image" src="http://placehold.it/1920x800/" alt="{{ post.title }}" >
+            <a href="{{ site.url }}{{ site.baseurl }}{{ post.url }}"><img class="snippet__feature-image" src="http://placehold.it/1920x800/" alt="{{ post.title }}" ></a>
         {% else %}
-            <img class="snippet__feature-image" src="http://placehold.it/1920x800/" alt="{{ post.title }}" >
+            <a href="{{ site.url }}{{ site.baseurl }}{{ post.url }}"><img class="snippet__feature-image" src="http://placehold.it/1920x800/" alt="{{ post.title }}" ></a>
         {% endif %}
     {% endif %}
-    </a>
     <h1 class="snippet__title">
-        <a href="{{ site.url }}{{ site.baseurl }}{{ post.url }}" class="snippet__link" title="{{ post.title }}">{{ post.title }}</a>
+    <a href="{{ site.url }}{{ site.baseurl }}{{ post.url }}" class="snippet__link" title="{{ post.title }}">
+        {{ post.title }}
+    </a>
     </h1>
     <div class="snippet__meta">
         <span class="meta__day">{{ post.date | date: "%-d" }}</span>
@@ -28,6 +29,9 @@
         <span class="meta__year">{{ post.date | date: "%Y" }}</span>
 
         {% if post.categories.size > 0 %}
+        {% assign pTitle = page.title | downcase %}
+        {% assign pCat = post.categories.first %}
+        {% if pCat != pTitle %}
             {% for cat in site.category %}
                 {% if cat.name == post.categories.first %}
                     {% assign featureCategory = cat.name %}
@@ -40,7 +44,9 @@
                 <a class="meta__category-link" href="{{ site.url }}{{ site.baseurl }}/categories/#{{ post.categories.first }}">{{post.categories.first}}</a>
             {% endif %}
         {% endif %}
+        {% endif %}
 
+        {% if post.author != page.name %}
         {% if post.author != '' %}
             <span class="slug-divider"></span>
             <span class="meta__author">
@@ -66,8 +72,7 @@
                 {% endunless %}
             {% endfor %}
             </span>
-        {% else %}
-            {{ site.title }}
+        {% endif %}
         {% endif %}
     </div>
     {% if post.excerpt and showExcerpt == true %}
