--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -2,7 +2,6 @@ $hbc-font-family: 'Poppins', sans-serif;
 
 * {
 	font-family: $hbc-font-family;
-	font-weight: 300;
 	text-rendering: optimizeLegibility;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-font-smoothing: antialiased;
@@ -19,6 +18,7 @@ h6 {
 
 p {
 	line-height: 160%;
+	font-weight: 300;
 	// font-size: 20px !default;
 	// overflow: hidden;
 
@@ -88,5 +88,14 @@ blockquote {
 		margin-bottom: 0px;
 		border-bottom: solid 1px $hbc-highlight;
 		color: $hbc-highlight;
+	}
+}
+
+// type styles
+
+.page {
+
+	&__header {
+		font-weight: 400;
 	}
 }
