--- a/assets/sass/components/_article-snippet.scss
+++ b/assets/sass/components/_article-snippet.scss
@@ -1,5 +1,7 @@
 .snippet {
 	position: relative;
+	display: flex;
+    flex-direction: column;
 
 	@media screen and (min-width: $breakpoint-medium) {
 
@@ -24,6 +26,7 @@
 	&__title {
 		margin: 0 0 10px 0;
 		line-height: 120%;
+		font-weight: 400;
 	}
 
 	&__link {
@@ -75,7 +78,7 @@
 	}
 
 	&__excerpt {
-
+		margin: 10px 0 0 0;
 	}
 
 }
