--- a/assets/sass/pages/_article-page.scss
+++ b/assets/sass/pages/_article-page.scss
@@ -109,6 +109,7 @@
 		    line-height: 110%;
 		    margin: 20px 0 0 -5px;
 		    pointer-events: none;
+		    font-weight: 300;
 		}
 
 		&__read-time {
