changed categories page title

--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <section class="page categories-page">
 	<header class="page__header">
-		<h1 class="page__title">All Posts By Category</h1>
+		<h1 class="page__title">Insights by Category</h1>
 	</header>
 	<section class="articles">
 	{% assign siteTags = site.categories | sort %}
@@ -26,7 +26,6 @@ layout: default
 	<section class="asides">
 		<div class="sticky-container">
 			{% include featured-topics.html %}
-			{% include featured-authors.html %}
 		</div>
 	</section>	
 </section>
