added code page

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -33,3 +33,4 @@
 @import '../sass/pages/categories-page';
 @import '../sass/pages/author-page';
 @import '../sass/pages/authors-page';
+@import '../sass/pages/code-page';
