--- a/assets/sass/pages/_article-page.scss
+++ b/assets/sass/pages/_article-page.scss
@@ -81,8 +81,15 @@
 				text-decoration: none;
 				color: $hbc-highlight;
 			    font-size: 15px;
+			    font-weight: 300;
 
-				&:after {
+				@include special-text-link();
+			}
+
+			&__date {
+				color: $hbc-gray;
+
+				&:before {
 					display: inline-block;
 					position: relative;
 					content: "";
@@ -92,14 +99,6 @@
 					margin-left: 10px;
 					margin-right: 10px;
 				}
-
-				&:hover {
-					text-decoration: underline;
-				}
-			}
-
-			&__date {
-				color: $hbc-gray;
 			}
 		}
 
