--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -14,9 +14,9 @@
         {% if page == paginator.page %}
         <span class="pagination__link pagination__link--current">{{ page }}</span>
         {% elsif page == 1 %}
-        <a class="pagination__link" href="{{ '/insights' | prepend: site.baseurl | replace: '//', '/' }}">{{ page }}</a>
+        <a class="pagination__link" href="{{ site.url }}{{ site.baseurl }}{{site.paginate_dir}}">{{ page }}</a>
         {% else %}
-        <a class="pagination__link" href="{{ '/insights/' | prepend: site.baseurl | replace: '//', '/' | append: page }}">{{ page }}</a>
+        <a class="pagination__link" href="{{ site.paginate_dir | prepend: site.baseurl | replace: '//', '/' | append: page }}">{{ page }}</a>
         {% endif %}
     {% endfor %}
     {% if paginator.next_page %}
