--- a/assets/sass/base/_common.scss
+++ b/assets/sass/base/_common.scss
@@ -2,7 +2,7 @@
 $hbc-black: #000000;
 $hbc-white: #ffffff;
 $hbc-off-white: #ffffff; // possibly #EFE7DF
-$hbc-highlight: #E94F3D;
+$hbc-highlight: #f15d3b;
 $hbc-border: darken(rgba($hbc-highlight, 0.12), 35%);
 $hbc-gray: #777;
 $hbc-gray-2: #999;
