updated permalink structure, added variables for header layout

--- a/assets/sass/base/_layout.scss
+++ b/assets/sass/base/_layout.scss
@@ -1,6 +1,8 @@
 // Basic Layout
 $site-width: 1280px;
 $content-width: 1080px;
+$sticky-header-height: 100px;
+$sticky-header-offset: 125px;
 
 // breakpoints
 $breakpoint-small: 375px;
