--- a/_layouts/authors.html
+++ b/_layouts/authors.html
@@ -10,10 +10,10 @@ title: Authors
 	<section class="authors">
 	{% for author in site.authors %}
 		<section class="author">
-			<svg class="author__avatar" xmlns="http://www.w3.org/2000/svg">
-		        <use class="hbc-svg-icon hbc-svg-icon--avatar__circle" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#circle" ></use>
-		        <use class="hbc-svg-icon hbc-svg-icon--avatar__head" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#head" ></use>
-		        <use class="hbc-svg-icon hbc-svg-icon--avatar__body" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#body" ></use>
+			<svg class="author__avatar" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" preserveAspectRatio="xMaxYMax meet">
+		        <use class="hbc-svg-icon hbc-svg-icon--avatar__circle" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#badge-buffalo" ></use>
+		        <!-- <use class="hbc-svg-icon hbc-svg-icon--avatar__head" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#head" ></use> -->
+		        <!-- <use class="hbc-svg-icon hbc-svg-icon--avatar__body" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#body" ></use> -->
 		    </svg>
 			<a href="{{ site.url }}{{ site.baseurl }}{{ author.url }}"><h3 class="author__link" >{{author.name}}</h3></a>
 		</section>
