--- a/assets/sass/pages/_author-page.scss
+++ b/assets/sass/pages/_author-page.scss
@@ -48,7 +48,7 @@
 
 		.sticky-container {
 			position: sticky;
-			top: 100px;
+			top: $sticky-header-offset;
 
 			.featured-topics {
 				margin-bottom: 0;
