--- a/assets/sass/pages/_authors-page.scss
+++ b/assets/sass/pages/_authors-page.scss
@@ -32,14 +32,14 @@
 		    }
 
 			&__avatar {
-				height: 32px;
-				width: 32px;
+				height: 120px;
+				width: 120px;
 				margin: 0 auto;
 
 				.hbc-svg-icon {
 
 					&--avatar__circle {
-						fill: #ccc;
+						fill: #000;
 					}
 
 					&--avatar__body,
@@ -66,7 +66,7 @@
 
 		.sticky-container {
 			position: sticky;
-			top: 100px;
+			top: $sticky-header-offset;
 
 			.featured-topics {
 				margin-bottom: 0;
